--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,7 +5,7 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = easy_doc_dk_8_11
+PRODUCT_NAME = se7ety_dk_8_11
 
 // The application's bundle identifier
 PRODUCT_BUNDLE_IDENTIFIER = com.example.easyDocDk811
