--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: easy_doc_dk_8_11
+name: se7ety_dk_8_11
 description: A new Flutter project.
 publish_to: 'none'
 version: 0.1.0
@@ -22,3 +22,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
