--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "easy_doc_dk_8_11",
-    "short_name": "easy_doc_dk_8_11",
+    "name": "se7ety_dk_8_11",
+    "short_name": "se7ety_dk_8_11",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
