--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "easy_doc_dk_8_11" "\0"
+            VALUE "FileDescription", "se7ety_dk_8_11" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "easy_doc_dk_8_11" "\0"
+            VALUE "InternalName", "se7ety_dk_8_11" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "easy_doc_dk_8_11.exe" "\0"
-            VALUE "ProductName", "easy_doc_dk_8_11" "\0"
+            VALUE "OriginalFilename", "se7ety_dk_8_11.exe" "\0"
+            VALUE "ProductName", "se7ety_dk_8_11" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
