--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   google_fonts: ^6.1.0
+  lottie: ^2.7.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
