--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,6 +67,6 @@ flutter {
 }
 
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:32.5.0')
-    implementation 'com.google.firebase:firebase-analytics'
+   implementation(platform("com.google.firebase:firebase-bom:32.5.0"))
+  
 }
