--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,15 @@ dependencies:
   cloud_firestore: ^4.12.2
   firebase_auth: ^4.12.1
   firebase_core: ^2.21.0
+  firebase_storage: ^11.5.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
   google_nav_bar: ^5.0.6
+  image_picker: ^1.0.4
+  intl: ^0.18.1
   lottie: ^2.7.0
   smooth_page_indicator: ^1.1.0
 
